EZCode_ebnf.txt
sequence   =    {statement}
              ;
statement  =    SEMICOLON
              | IDENTIFIER, ASSIGN, expr, SEMICOLON
              | WHILE, parenexpr, statement          
              | IF, parenexpr, statement, [ELSE, statement]
              | PRINT, LPAREN, concatlist, RPAREN, SEMICOLON
              | LCURLY, sequence, RCURLY
              ;
parenexpr  =    LPAREN, expr, RPAREN
              ;
concatlist =    (STRING | expr), {COMMA, (STRING | expr)}
              ;
expr       =    INPUT, LPAREN, RPAREN
              | andexpr, {OR, andexpr}
              ;
andexpr    =    equalexpr, {AND, equalexpr}
              ;
equalexpr  =    relexpr, [(EQUAL | NOTEQUAL), relexpr]
              ;
relexpr    =    addexpr, [(LESSEQUAL | LESS | GREATEREQUAL | GREATER), addexpr]
              ;
addexpr    =    multexpr, {(PLUS | MINUS), multexpr}
              ;
multexpr   =    term, {(MULTIPLY | DIVIDE | REMAINDER), term}
              ;
term       =    IDENTIFIER
              | BOOLEAN
              | FLOAT
              | INTEGER
              | CHARACTER
              | STRING
              | parenexpr
              | (PLUS | MINUS | NOT), term
              ;
